# cavapy

./: .Rhistory  LICENSE  PACKAGING.md  README.md  cavapy.py  climate.py  get_climate_data.py  pyproject.toml
functions/: .Rhistory  README.md  climate_data_pyAEZ.py  pyAEZ.R  setup.py  test.py
functions/climate_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
