[tool.poetry]
name = "pyaez-climate-module"
version = "0.1.0"
description = "\"Retrieve climate data for pyAEZ\""
authors = ["Riccardo Soldan <riccardosoldan@hotmail.it>", "Oleh Lokshyn <olokshyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xclim = "^0.53.2"
geopandas = "^0.14.4"
matplotlib = "^3.9.2"
netcdf4 = "^1.7.2"
dask = "^2024.11.2"
bottleneck = "^1.4.2"
llvmlite = "0.43.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
