[tool.poetry]
name = "cavapy"
version = "0.1.0"
description = "CAVA Python package. Retrive and analyze climate data."
authors = ["Riccardo Soldan <riccardosoldan@hotmail.it>", "Oleh Lokshyn <olokshyn@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Risk-Team/cavapy"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
xclim = "^0.53.2"
geopandas = "^0.14.4"
matplotlib = "^3.9.2"
netcdf4 = "^1.7.2"
dask = "^2024.11.2"
bottleneck = "^1.4.2"
llvmlite = "0.43.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
