[tool.poetry]
name = "cavapy"
version = "0.2.0"
description = "CAVA Python package. Retrive and analyze climate data."
authors = ["Riccardo Soldan <riccardosoldan@hotmail.it>", "Oleh Lokshyn <olokshyn@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Risk-Team/cavapy"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
